Repeat Last for transforms with Individual Origins and Normal orientation repeats incorrectly #73148

Closed
opened 2020-01-15 20:49:26 +01:00 by Stanislav Blinov · 4 comments

Blender Version
Broken: all?
Worked: N/D

Short description of error
Repeating a transform that was made with Individual Origins as pivot and Normal transform orientation seems to use incorrect axis and/or pivot.

Exact steps for others to reproduce the error

  1. Load the default scene
  2. Switch to Face selection mode and select two opposite faces on the Cube
  3. Set pivot point to 'Individual Origins'
  4. Set transform orientation to 'Normal'
  5. Move along Z axis. Note that the two faces are moving in the opposite directions (as expected)
  6. Repeat the move manually. Note that the faces continue to move along their respective normals (as expected)
  7. Repeat using the Repeat Last operator. Note that the two faces have now moved along a different axis
**Blender Version** Broken: all? Worked: N/D **Short description of error** Repeating a transform that was made with Individual Origins as pivot and Normal transform orientation seems to use incorrect axis and/or pivot. **Exact steps for others to reproduce the error** 1. Load the default scene 2. Switch to Face selection mode and select two opposite faces on the Cube 3. Set pivot point to 'Individual Origins' 4. Set transform orientation to 'Normal' 5. Move along Z axis. Note that the two faces are moving in the opposite directions (as expected) 6. Repeat the move manually. Note that the faces continue to move along their respective normals (as expected) 7. Repeat using the Repeat Last operator. Note that the two faces have now moved along a different axis

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 5ca8875f69

This issue was referenced by 5ca8875f69d3b3644ca30882428608773fcc4481

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-05-19 23:55:58 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73148
No description provided.