Fix T73148: Incorrect Repeat Last for transforms with Individual Origins and Normal orientation

`pvec` was confusing and was adding steps that are apparently unnecessary.
So the code has been redone so as not to use this pvec.